[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/wizard_editor/wizard_editor_nodes/wizard_editor_node_set_variable.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/icons/icon_128_edit_pencil.svg" type="Texture" id=3]

[node name="StepSetVariable" type="GraphNode"]
margin_right = 225.0
margin_bottom = 91.0
mouse_filter = 1
theme = ExtResource( 2 )
title = "Set Variable"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.537255, 0.819608, 0.945098, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_left = 102.0
margin_top = 34.0
margin_right = 123.0
margin_bottom = 55.0
rect_min_size = Vector2( 21, 21 )
size_flags_horizontal = 4
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="StepLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 59.0
margin_right = 217.0
margin_bottom = 79.0
text = "variable:"

[node name="VariableNameEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 83.0
margin_right = 217.0
margin_bottom = 115.0
size_flags_vertical = 3

[node name="StepLabelVal" type="Label" parent="."]
margin_left = 8.0
margin_top = 119.0
margin_right = 217.0
margin_bottom = 139.0
text = "value:"

[node name="VariableValueEdit" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 143.0
margin_right = 217.0
margin_bottom = 175.0
size_flags_vertical = 3

[connection signal="text_changed" from="VariableValueEdit" to="." method="_on_VariableValueEdit_text_changed"]
